# flux-screensavers

./: README.md  flake.nix  run_linux_screensaver.sh  run_screensaver.sh
.github/workflows/: main.yml
linux/: Cargo.toml  linux.nix
linux/src/: main.rs
nix/: find-headers.patch
windows/: Cargo.toml  build.rs
windows/src/: main.rs
