[package]
name = "flux-linux-screensaver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
flux = { version = "2", git = "https://github.com/sandydoo/flux", branch = "main" }
glow = "0.11.2"
glutin = "0.28"
log = "0.4.16"
takeable-option = "0.5"

# [patch.crates-io]
# glutin = { path = "../../scratch/glutin/glutin" }

[patch."https://github.com/sandydoo/flux"]
flux = { path = "../../flux/crates/flux" }
