[package]
name = "flux-windows-screensaver"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9"
flux = { version = "1", git = "https://github.com/sandydoo/flux", branch = "main" }
glow = "0.11.2"
log = "0.4.16"
glutin = "0.28.0"
takeable-option = "0.4"

[dependencies.windows-sys]
version =  "0.33"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

# [patch."https://github.com/sandydoo/flux"]
# flux = { version = "1", path = "../../flux/crates/flux" }
